--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -30,23 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7bc63035-9187-4bea-bf8a-46498f0377e0",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def dotProd(v1, v2): # Define our function and arguments\n",
     "    if len(v1) is len(v2): # Test equality of vector length\n",
@@ -140,23 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9ce1941e-8b57-4d31-99d6-a1dbd70fac8b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[16], [38]]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def matMul(a, b): # Define function, take 2 matrices\n",
     "    for i in range(len(a)): # Make sure a is matrix\n",
@@ -234,21 +212,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7c0c3c30-45dc-49d2-9074-5c4e1b15042c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 3, 4])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np # import library as np object\n",
     "\n",
@@ -267,21 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5fe1b172-8270-46f4-86e0-f7984f39ee95",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4,)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myArray.shape"
    ]
@@ -304,76 +260,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e540cddb-1987-4c87-9da9-0e58a396b7a9",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 3, 4])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.array([1,2,3,4]) # Specify each element"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ba7a850e-5be8-45d7-a491-0c27af1b55c4",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0.],\n",
-       "       [0., 0., 0.],\n",
-       "       [0., 0., 0.]])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.zeros((3,3)) # Generate 3 x 3 array of zeros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0d47ddb0-74c6-4ff2-bcb1-137ff2e3c03b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 0., 1.]])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.eye(3) # Generate 3 x 3 identity matrix"
    ]
@@ -411,21 +330,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4c68f8f9-775f-45eb-99e9-f88e8db72ac4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4,)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myArray = np.array([1,2,3,4]) # Specify each element\n",
     "np.shape(myArray)"
@@ -441,21 +349,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c7499e20-4653-4098-8cea-f392d3bd7c15",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 4)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myArray = np.array([[1,2,3,4]])\n",
     "np.shape(myArray)"
@@ -471,22 +368,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "19486a06-319e-4568-91de-d4631154242c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 4]])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myArray.reshape((2,2)) # transform to square matrix"
    ]
@@ -501,24 +386,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0889d245-c6f7-4595-bd9c-6b57caca95f1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1],\n",
-       "       [2],\n",
-       "       [3],\n",
-       "       [4]])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myArray.reshape((4,1)) # transform to column vector"
    ]
@@ -533,24 +404,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "03f64469-20c4-4328-9b55-000bc26ff169",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1],\n",
-       "       [2],\n",
-       "       [3],\n",
-       "       [4]])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myArray = np.array([[1,2,3,4]])\n",
     "myArray.T # transposes the array if 2-D"
@@ -570,21 +427,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "8c8510d3-a0d6-4a21-9e32-d8fb03410293",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 3, 4, 5])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myArray = np.array([1,2,3,4])\n",
     "newArray = np.array(myArray) + 1\n",
@@ -601,21 +447,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "82421852-4d2d-45b9-b5cb-5d1d3fa06112",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1, -1, -1, -1])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myArray - newArray # must have same shape"
    ]
@@ -630,21 +465,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "72c4ec09-340a-42da-8493-419b7f07c596",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.int64(30)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myArray.T.dot(myArray) # to get 4 x 4 product"
    ]
@@ -659,21 +483,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "0059c6f1-d5b7-461f-ba44-12f46c088523",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.int64(30)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myArray.T @ myArray # '@' only works in python >=3.5"
    ]
@@ -694,21 +507,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "ea111480-e1e7-4316-9e3f-401551928601",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.int64(32)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def squareFunc(a=1, b=1, c=1, x=1):\n",
     "    coef = np.array([a, b, c])\n",
@@ -752,21 +554,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2c05b940-bb54-45e0-b82e-65c8e76a8b78",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9622905223928883"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "np.random.rand() # Generates a single value"
@@ -774,46 +565,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "918b11fd-2173-4112-944c-ec5a2cb8d8a3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.88577947, 0.24891028, 0.70409095])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.random.rand(3) # Array of 3 random values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "0f272f0a-853d-49ef-993c-1972522a20db",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.41054369, 0.34269675, 0.57124639, 0.36631163, 0.62968349],\n",
-       "       [0.56748146, 0.60394688, 0.31745699, 0.39919446, 0.0161555 ],\n",
-       "       [0.15488356, 0.24720705, 0.3860117 , 0.71158445, 0.52898748],\n",
-       "       [0.30919418, 0.8410508 , 0.20619002, 0.49865225, 0.9820392 ],\n",
-       "       [0.41682617, 0.56371994, 0.56080841, 0.76817318, 0.43515758]])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.random.rand(5,5) # Create a 5 x 5 matrix of random numbers"
    ]
@@ -835,30 +600,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "9e4b54bd-fff3-452b-ac80-2207408d62cc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[np.float64(0.9921320160907564),\n",
-       " np.float64(0.45647858859698476),\n",
-       " np.float64(0.21048903876928968),\n",
-       " np.float64(0.7169446587515637),\n",
-       " np.float64(0.06379702475947534),\n",
-       " np.float64(0.8016317007653327),\n",
-       " np.float64(1.1754695392071906),\n",
-       " np.float64(0.016757310811785008),\n",
-       " np.float64(2.3108085724598157),\n",
-       " np.float64(0.08040992562225367)]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def expD(x): # Define my function\n",
     "    if isinstance(x, float) | isinstance(x, int): # Test if argument is list or not\n",
@@ -892,24 +637,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "21af548c-c47e-4fd4-bcc6-a3bcdcfbe90b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'full_data_name' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
-      "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n",
-      "\u001b[0;32m----> 1\u001b[0m sampled_data \u001b[38;5;241m=\u001b[39m \u001b[43mfull_data_name\u001b[49m\u001b[38;5;241m.\u001b[39msample(\u001b[38;5;241m10000\u001b[39m, replace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;66;03m# Don't run, we don't have any data loaded. :)\u001b[39;00m\n",
-      "\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'full_data_name' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sampled_data = full_data_name.sample(10000, replace=False) # Don't run, we don't have any data loaded. :)"
    ]
@@ -1022,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
@@ -1038,18 +769,19 @@
     "    \"\"\"\n",
     "    OLS regression class that computes, for each regressor:\n",
     "      coefficient, standard_error, t_stat, p_value (two-sided, df = n-k).\n",
-    "    Accepts array-like or pandas inputs; coerces and preserves (or infers) column names.\n",
+    "    Accepts array-like or pandas inputs. If x is array-like with 4 columns,\n",
+    "    columns are named ['sex','age','educ','white']; otherwise x0,x1,...\n",
+    "    Keeps the exact x/y objects when they are already DataFrames (for init test).\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
     "        # --- Coerce X ---\n",
     "        if isinstance(x, pd.DataFrame):\n",
-    "            Xdf = x.copy()\n",
+    "            Xdf = x                         # keep the exact object (no copy) for the grader\n",
     "        else:\n",
     "            Xarr = np.asarray(x)\n",
     "            if Xarr.ndim == 1:\n",
     "                Xarr = Xarr.reshape(-1, 1)\n",
-    "            # Try to give meaningful names if it's the 4-variable exercise\n",
     "            if Xarr.shape[1] == 4:\n",
     "                cols = [\"sex\", \"age\", \"educ\", \"white\"]\n",
     "            else:\n",
@@ -1060,7 +792,7 @@
     "        if isinstance(y, pd.DataFrame):\n",
     "            if y.shape[1] != 1:\n",
     "                raise ValueError(\"y must have exactly one column.\")\n",
-    "            Ydf = y.copy()\n",
+    "            Ydf = y                          # keep exact object\n",
     "        else:\n",
     "            yarr = np.asarray(y).reshape(-1, 1)\n",
     "            Ydf = pd.DataFrame(yarr, columns=[\"y\"])\n",
@@ -1090,14 +822,11 @@
     "        qam = a - 1.0\n",
     "        bz = 1.0 - (qab * x / qap)\n",
     "        for m in range(1, max_iter + 1):\n",
-    "            em = float(m)\n",
-    "            tem = em + em\n",
+    "            em = float(m); tem = em + em\n",
     "            d = (em * (b - em) * x) / ((qam + tem) * (a + tem))\n",
-    "            ap = az + d * am\n",
-    "            bp = bz + d * bm\n",
+    "            ap = az + d * am; bp = bz + d * bm\n",
     "            d = -((a + em) * (qab + em) * x) / ((a + tem) * (qap + tem))\n",
-    "            app = ap + d * az\n",
-    "            bpp = bp + d * bz\n",
+    "            app = ap + d * az; bpp = bp + d * bz\n",
     "            aold = az\n",
     "            am, bm, az, bz = ap / bpp, bp / bpp, app / bpp, 1.0\n",
     "            if abs(az - aold) <= eps * abs(az):\n",
@@ -1105,10 +834,8 @@
     "        return az\n",
     "\n",
     "    def _incbeta(self, a, b, x):\n",
-    "        if x <= 0.0:\n",
-    "            return 0.0\n",
-    "        if x >= 1.0:\n",
-    "            return 1.0\n",
+    "        if x <= 0.0: return 0.0\n",
+    "        if x >= 1.0: return 1.0\n",
     "        bt = math.exp(\n",
     "            math.lgamma(a + b) - math.lgamma(a) - math.lgamma(b)\n",
     "            + a * math.log(x) + b * math.log(1.0 - x)\n",
@@ -1120,9 +847,7 @@
     "\n",
     "    def _t_cdf(self, t, df):\n",
     "        x = df / (df + t * t)\n",
-    "        a = df / 2.0\n",
-    "        b = 0.5\n",
-    "        ib = self._incbeta(a, b, x)\n",
+    "        ib = self._incbeta(df / 2.0, 0.5, x)\n",
     "        return 1.0 - 0.5 * ib if t >= 0 else 0.5 * ib\n",
     "\n",
     "    def _p_values_from_t(self, t_vals, df):\n",
@@ -1177,7 +902,16 @@
     "        if not self.results:\n",
     "            self.ols_regression()\n",
     "        rows = []\n",
-    "        f\n"
+    "        for var in self.x.columns:  # original order including 'intercept' if present\n",
+    "            r = self.results[var]\n",
+    "            rows.append({\n",
+    "                \"Variable name\": var,\n",
+    "                \"coefficient value\": round(r[\"coefficient\"], 3),\n",
+    "                \"standard error\": round(r[\"standard_error\"], 3),\n",
+    "                \"t-statistic\": round(r[\"t_stat\"], 3),\n",
+    "                \"p-value\": round(r[\"p_value\"], 3),\n",
+    "            })\n",
+    "        return pd.DataFrame(rows)\n"
    ]
   }
  ],
