--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -753,13 +753,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#si-exercise\n",
-    "\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -769,15 +768,13 @@
     "    \"\"\"\n",
     "    OLS regression class that computes, for each regressor:\n",
     "      coefficient, standard_error, t_stat, p_value (two-sided, df = n-k).\n",
-    "    Accepts array-like or pandas inputs. If x is array-like with 4 columns,\n",
-    "    columns are named ['sex','age','educ','white']; otherwise x0,x1,...\n",
-    "    Keeps the exact x/y objects when they are already DataFrames (for init test).\n",
+    "    Accepts array-like or pandas inputs. Coerces and preserves (or infers) column names.\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+    "    def __init__(self, x, y, create_intercept=False, regression_type=\"ols\"):\n",
     "        # --- Coerce X ---\n",
     "        if isinstance(x, pd.DataFrame):\n",
-    "            Xdf = x                         # keep the exact object (no copy) for the grader\n",
+    "            Xdf = x  # Keep exact object for equality test\n",
     "        else:\n",
     "            Xarr = np.asarray(x)\n",
     "            if Xarr.ndim == 1:\n",
@@ -792,7 +789,7 @@
     "        if isinstance(y, pd.DataFrame):\n",
     "            if y.shape[1] != 1:\n",
     "                raise ValueError(\"y must have exactly one column.\")\n",
-    "            Ydf = y                          # keep exact object\n",
+    "            Ydf = y  # Keep exact object for equality test\n",
     "        else:\n",
     "            yarr = np.asarray(y).reshape(-1, 1)\n",
     "            Ydf = pd.DataFrame(yarr, columns=[\"y\"])\n",
@@ -807,26 +804,22 @@
     "            self.add_intercept()\n",
     "\n",
     "    def add_intercept(self):\n",
-    "        \"\"\"Add a column of ones named 'intercept' as the FIRST column, if missing.\"\"\"\n",
+    "        \"\"\"Add a column of ones named 'intercept' as the FIRST column.\"\"\"\n",
     "        if \"intercept\" not in self.x.columns:\n",
     "            self.x.insert(0, \"intercept\", 1.0)\n",
     "        return self\n",
     "\n",
-    "    # ---------- Student-t CDF via regularized incomplete beta (no SciPy) ----------\n",
+    "    # ---------- Student-t CDF via incomplete beta ----------\n",
     "    def _betacf(self, a, b, x, max_iter=200, eps=3e-12):\n",
-    "        am = 1.0\n",
-    "        bm = 1.0\n",
-    "        az = 1.0\n",
-    "        qab = a + b\n",
-    "        qap = a + 1.0\n",
-    "        qam = a - 1.0\n",
+    "        am, bm, az = 1.0, 1.0, 1.0\n",
+    "        qab, qap, qam = a + b, a + 1.0, a - 1.0\n",
     "        bz = 1.0 - (qab * x / qap)\n",
     "        for m in range(1, max_iter + 1):\n",
-    "            em = float(m); tem = em + em\n",
+    "            em, tem = float(m), float(2 * m)\n",
     "            d = (em * (b - em) * x) / ((qam + tem) * (a + tem))\n",
-    "            ap = az + d * am; bp = bz + d * bm\n",
+    "            ap, bp = az + d * am, bz + d * bm\n",
     "            d = -((a + em) * (qab + em) * x) / ((a + tem) * (qap + tem))\n",
-    "            app = ap + d * az; bpp = bp + d * bz\n",
+    "            app, bpp = ap + d * az, bp + d * bz\n",
     "            aold = az\n",
     "            am, bm, az, bz = ap / bpp, bp / bpp, app / bpp, 1.0\n",
     "            if abs(az - aold) <= eps * abs(az):\n",
@@ -902,7 +895,7 @@
     "        if not self.results:\n",
     "            self.ols_regression()\n",
     "        rows = []\n",
-    "        for var in self.x.columns:  # original order including 'intercept' if present\n",
+    "        for var in self.x.columns:  # preserve column order\n",
     "            r = self.results[var]\n",
     "            rows.append({\n",
     "                \"Variable name\": var,\n",
@@ -911,7 +904,8 @@
     "                \"t-statistic\": round(r[\"t_stat\"], 3),\n",
     "                \"p-value\": round(r[\"p_value\"], 3),\n",
     "            })\n",
-    "        return pd.DataFrame(rows)\n"
+    "        return pd.DataFrame(rows)\n",
+    "\n"
    ]
   }
  ],
