--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -753,10 +753,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A) X/Y equality: True True\n",
+      "B) Variable names: ['intercept', 'sex', 'age', 'educ', 'white']\n",
+      "C) Summary column names: ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<positron-console-cell-6>:142: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n"
+     ]
+    }
+   ],
    "source": [
     "#si-exercise\n",
     "\n",
@@ -930,7 +947,8 @@
     "                \"t-statistic\": round(r[\"t_stat\"], 3),\n",
     "                \"p-value\": round(r[\"p_value\"], 3),\n",
     "            })\n",
-    "        return pd.DataFrame(rows)"
+    "        return pd.DataFrame(rows)\n",
+    "\n"
    ]
   }
  ],
