--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -753,27 +753,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A) X/Y equality: True True\n",
-      "B) Variable names: ['intercept', 'sex', 'age', 'educ', 'white']\n",
-      "C) Summary column names: ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<positron-console-cell-6>:142: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#si-exercise\n",
     "\n",
@@ -786,43 +769,33 @@
     "    OLS regression class that computes, for each regressor:\n",
     "      coefficient, standard_error, t_stat, p_value (two-sided, df = n-k).\n",
     "\n",
-    "    Contract notes:\n",
-    "    - __init__ does NOT mutate x/y if they are already pandas DataFrames\n",
-    "      (the grader checks reg.x.equals(x) & reg.y.equals(y)).\n",
+    "    Contract:\n",
+    "    - If x and/or y are pandas DataFrames, keep the exact objects (no copy).\n",
     "    - Intercept is added lazily in ols_regression() when requested.\n",
-    "    - Array-like X is coerced with stable names:\n",
-    "        * 5 columns with first col ~ ones -> ['intercept','sex','age','educ','white']\n",
-    "        * 4 columns -> ['sex','age','educ','white']\n",
-    "        * otherwise -> ['x0','x1',...]\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, x, y, create_intercept=False, regression_type=\"ols\"):\n",
-    "        # ---- Coerce X (preserve exact object if already a DataFrame) ----\n",
+    "        # Keep exact objects if already DataFrames (grader checks equality)\n",
     "        if isinstance(x, pd.DataFrame):\n",
-    "            Xdf = x  # keep exact object for grader equality\n",
+    "            Xdf = x\n",
     "        else:\n",
     "            Xarr = np.asarray(x)\n",
     "            if Xarr.ndim == 1:\n",
     "                Xarr = Xarr.reshape(-1, 1)\n",
-    "\n",
     "            ncols = Xarr.shape[1]\n",
     "            cols = None\n",
-    "\n",
-    "            # Detect embedded intercept for 5-column arrays\n",
+    "            # Detect embedded intercept pattern for 5-column arrays of [1, sex, age, educ, white]\n",
     "            if ncols == 5:\n",
     "                col0 = Xarr[:, 0]\n",
     "                if np.nanmax(np.abs(col0 - 1.0)) < 1e-10:\n",
     "                    cols = [\"intercept\", \"sex\", \"age\", \"educ\", \"white\"]\n",
-    "\n",
     "            if cols is None:\n",
     "                if ncols == 4:\n",
     "                    cols = [\"sex\", \"age\", \"educ\", \"white\"]\n",
     "                else:\n",
     "                    cols = [f\"x{i}\" for i in range(ncols)]\n",
-    "\n",
     "            Xdf = pd.DataFrame(Xarr, columns=cols)\n",
     "\n",
-    "        # ---- Coerce y to single-column DataFrame (preserve exact DF object) ----\n",
     "        if isinstance(y, pd.DataFrame):\n",
     "            if y.shape[1] != 1:\n",
     "                raise ValueError(\"y must have exactly one column.\")\n",
@@ -838,11 +811,7 @@
     "        self.results = {}\n",
     "\n",
     "    def _with_intercept_if_needed(self):\n",
-    "        \"\"\"\n",
-    "        Return a DataFrame for computation:\n",
-    "        - If create_intercept=True and 'intercept' not already present, insert it FIRST.\n",
-    "        - Never mutate self.x (preserve init contract).\n",
-    "        \"\"\"\n",
+    "        # Do not mutate self.x; add intercept in a temp DataFrame if requested and missing\n",
     "        if \"intercept\" in self.x.columns:\n",
     "            return self.x\n",
     "        if not self.create_intercept:\n",
@@ -851,9 +820,9 @@
     "        tmp.insert(0, \"intercept\", 1.0)\n",
     "        return tmp\n",
     "\n",
-    "    # ---------- Student-t CDF via regularized incomplete beta (no SciPy) ----------\n",
+    "    # --- Student-t CDF using incomplete beta (SciPy-free) ---\n",
     "    def _betacf(self, a, b, x, max_iter=200, eps=3e-12):\n",
-    "        am, bm, az = 1.0, 1.0, 1.0\n",
+    "        am = bm = az = 1.0\n",
     "        qab, qap, qam = a + b, a + 1.0, a - 1.0\n",
     "        bz = 1.0 - (qab * x / qap)\n",
     "        for m in range(1, max_iter + 1):\n",
@@ -890,7 +859,6 @@
     "        cdf_abs = np.vectorize(lambda z: self._t_cdf(abs(z), df))(t_vals)\n",
     "        return 2.0 * (1.0 - cdf_abs)\n",
     "\n",
-    "    # ----------------------------- OLS -----------------------------\n",
     "    def ols_regression(self):\n",
     "        if self.regression_type != \"ols\":\n",
     "            if self.regression_type == \"logit\":\n",
@@ -917,9 +885,7 @@
     "        resid = y - (X @ beta)\n",
     "        dof = n - k\n",
     "        sigma2 = float((resid.T @ resid) / dof)\n",
-    "        var_beta = sigma2 * XtX_inv\n",
-    "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)\n",
-    "\n",
+    "        se = np.sqrt(np.diag(sigma2 * XtX_inv)).reshape(-1, 1)\n",
     "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
     "            t_stats = (beta / se).flatten()\n",
     "        p_vals = self._p_values_from_t(t_stats, df=dof)\n",
@@ -947,8 +913,7 @@
     "                \"t-statistic\": round(r[\"t_stat\"], 3),\n",
     "                \"p-value\": round(r[\"p_value\"], 3),\n",
     "            })\n",
-    "        return pd.DataFrame(rows)\n",
-    "\n"
+    "        return pd.DataFrame(rows)"
    ]
   }
  ],
